2018-09-14: Remove field `sample_counter` from `Voice` struct.
The documentation of the field says it is updated every sample, but it is only updated for
every buffer. Because we leave it up to the plugin to decide in which way to iterate over
the generated samples (e.g. first iterate over the outputs and for each output, iterate over
the samples), it is hard to ensure that the field `sample_counter` will contain the correct
data at any time, so we simply remove it, leaving it up to the plugin to keep track of the number
of samples played.

2018-09-14: Rename `Voice.sound` to `Voice.renderable`. 
This is more consistent with the name of the data-type, so hopefully more easy to remember.

2018-09-14: Remove field `amplitude_modifier`.
Same as `sample_counter`: it's hard to ensure that this is indeed updated every sample.

2018-09-14: No longer put `sample_rate` inside a `Cell`
No interial mutability is needed here, as far as I can tell.